--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,11 +22,19 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
 
+    - name: Set Release Version
+      id: set_release_version
+      run: |
+        echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
     - name: Install dependencies
       run: make install
 
     - name: Build
-      run: make build-all
+      run: |
+        export AppVersion="${{ env.RELEASE_VERSION }}"
+        echo "Building version: $AppVersion"
+        make build-all
 
     - name: Archive build artifacts
       uses: actions/upload-artifact@v3
