provider refactor and discord added

--- a/chatz.ini
+++ b/chatz.ini
@@ -1,18 +1,22 @@
 [default]
 PROVIDER=slack
-SLACK_TOKEN=
-CHANNEL_ID=
+TOKEN=<bot-token>
+CHANNEL_ID=<channel-id>
 
 [slack]
 PROVIDER=slack
-SLACK_TOKEN=
-CHANNEL_ID=
+TOKEN=<bot-token>
+CHANNEL_ID=<channel-id>
 
 [google]
 PROVIDER=google
-WEB_HOOK_URL=
+WEB_HOOK_URL=<webhook-url>
 
 [telegram]
 PROVIDER=telegram
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_CHAT_ID=
+TOKEN=<bot-token>
+CHAT_ID=<chat-id>
+
+[discord]
+PROVIDER=discord
+WEB_HOOK_URL=<webhook-url>
