chatz.ini modified

--- a/chatz.ini
+++ b/chatz.ini
@@ -20,3 +20,8 @@ CHAT_ID=<chat-id>
 [discord]
 PROVIDER=discord
 WEB_HOOK_URL=<webhook-url>
+
+[redis]
+PROVIDER=redis
+CONNECTION_URL=<redis-url>
+CHANNEL_ID=<redis-channel>
