--- a/.github/workflows/go-tests.yaml
+++ b/.github/workflows/go-tests.yaml
@@ -15,6 +15,8 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.22
+    - name: Download dependencies
+      run: make dep
     - name: Build
       run: make build
     - name: Test
